# MLOps-Course-Codes

./: .gitignore  README.md  sample_data.csv
.github/workflows/: codecheck.yaml  tests.yaml
Exercises/: .coverage
Exercises/ApplicationLogging/: config.yaml  logger_advanced.py  logger_test.py  logging.conf  logging_Programmatic.py  logging_conf.py  logging_hydra.py  logging_pytorch.py  logging_rich.py  logging_tensorflow.py  logging_to_file.py
Exercises/DataVersionControl/: README.md  demo.sh  pyproject.toml
Exercises/DataVersionControl/data/: sample_cars.csv
Exercises/Docker/: .dockerignore  README.md  predict.dockerfile  pyproject.toml  train.dockerfile
Exercises/Docker/data/: make_example_data.py
Exercises/Docker/simple_mlops/: __init__.py  predict.py  train.py
Exercises/GCP Artifact Registry/: cloudbuild.yaml
Exercises/Github Actions/.dvc/: config
Exercises/Github Actions/.github/workflows/: wf_dvc_pull.yaml
Exercises/GoodCodingPractices/: README.md  docstring_exercise.py  pyproject.toml  style_exercise.py  typing_exercise.py
Exercises/Hydra/: README.md  demo.nu  demo.ps1  demo.sh  pyproject.toml  reproducibility_tester.py  vae_mnist.py
Exercises/Hydra/conf/: config.yaml
Exercises/Hydra/conf/experiment/: .gitkeep
Exercises/MLflow/: hyperopt_tuning.py  mlflow_advanced.py  mlflow_basic.py  mlflow_docker.py  register_model.py  use_model.py
Exercises/MLflow/my_mlflow_project/: MLproject  conda.yaml  train.py
Exercises/Reproducibility/: reproducibility_tester.py  vae_mnist.py
Exercises/models/: mnist_model.py
Exercises/tests/: __init__.py  test_data.py  test_error_handling.py  test_model.py  test_training.py
Exercises/training/: train.py
Exercises/wandb/: docker_run_commands  requirements.txt  sweep.yaml  wandb.dockerfile  wandb_advanced.py  wandb_basic.py
intro-to-pytorch/: README.md
