[project]
name = "dvc-exercise"
version = "0.1.0"
description = "SE 489 — Data Version Control exercise. Tracks a small CSV with DVC + Google Drive."
readme = "README.md"
requires-python = ">=3.11"

# Core deps for this exercise. Students install these with `pip install -e .`
# or simply `pip install "dvc>=3.60" "dvc-gdrive>=3.0.1"`.
dependencies = [
    "dvc>=3.60,<4",
    "dvc-gdrive>=3.0.1",
]

[project.optional-dependencies]
# Windows users occasionally need pywin32 for dvc's file locking. If `dvc add`
# errors out with something like "ImportError: No module named win32file",
# install the windows extra:  pip install -e ".[windows]"
windows = ["pywin32; platform_system=='Windows'"]
