[project]
name = "simple-mlops"
version = "0.1.0"
description = "Minimal package used for the SE 489 Docker exercise."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["simple_mlops*"]
