[project]
name = "mlops-hydra-exercise"
version = "0.1.0"
description = "Hydra configuration management for a PyTorch VAE on MNIST."
requires-python = ">=3.10"
dependencies = [
    "hydra-core==1.3.2",
    "omegaconf>=2.3,<2.4",
    "torch>=2.0",
    "torchvision>=0.15",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
